--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <header>
       Lab 2 Meeting Minutes Date: 04-10-24 
       <br>
-      <br>
-      <div>Index</div>
+      <div class="navigation">
         <nav>
           <ul>
             <li><a href="#Attendees">Attendees</a></li>
@@ -70,7 +69,8 @@
         <h2>Recap and Remaining Discussion</h2>
         <span>
           <p> 
-            We read the book <i>To Kill a Mockingbird</i> by <a href="https://en.wikipedia.org/wiki/Harper_Lee"><i>Nelle Harper Lee</i></a> and  immersed ourselves in its portrayal of justice, 
+            <h3><i>To Kill a Mockingbird</i> by <a href="https://en.wikipedia.org/wiki/Harper_Lee"><i>Nelle Harper Lee</i></a></h3>
+            We immersed ourselves in its portrayal of justice, 
             prejudice, and moral integrity in the American South during the 1930s. We talked about the profound impact of racial injustice.         Our discussion gravitated towards the continuous relevance of the novel's themes, prompting reflections on the ongoing struggle
             for equality and compassion. We explored the nuances of character dynamics
             uncovering layers of meaning in their interactions with the world around them. As we dissected the narrative's moral dilemmas and poignant moments, we were reminded of the power of empathy and the importance of standing up for what is right, even in the face of adversity. <br>
@@ -101,7 +101,7 @@
           <br>
       </section>  
       <section>
-        <h3>Join Our book Club </h3>
+        <legend>Join Our book Club </legend>
         <form>
           <fieldset>
             <label for="name">Name: </label>
