--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <h1>BookNotes Meeting Minutes</h1>
-      <hr />
+      <hr>
       <section id = "Attendees">
         <h2> Meeting Attendees</h2>
         <ul>
@@ -35,53 +35,33 @@
           <li>Kate</li>
         </ul>
       </section>
-      <hr />
+      <hr>
       <section id = "agenda">
         <h2>Agenda</h2>
         <ol>
           <li>Discussion on Book of the Month</li>
-          <ul>
-            <li>Favorite Character</li>
-            <li>Favorite Quote</li>
-            <li>Favorite Scene</li>
-            <li>Talk about the main themes surrounding the book</li>
-          </ul> 
           <li>Next Book of the Month</li>
           <li><b>Date, time</b> and <b>location</b> for the next meeting</li>        
         </ol>
       </section>
-      <hr />      
+      <hr>      
       <section id = "recap">
         <h2>Recap and Remaining Discussion</h2>
-        <span>
           <p> 
-            We read the book <i>Circe</i> by <a href="https://madelinemiller.com/"><i>Madeline Miller</i></a> last month and had an in-depth
-            discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism.  
-            However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on.
-            We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling and thought-provoking read 
-            that sparked engaging discussions and amplified the voice of women throughout mythology. <br>
+            We read the book    <span style = "background-color:lightblue;"><i>Circe</i> by <a href="https://madelinemiller.com/"><i>Madeline Miller</i></a> </span> last month and had an in-depth discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism. However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on. We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling thought-provoking read that sparked engaging discussions and amplified the voice of women throughout mythology. </p> <br>         
             <br>
-            <img src="circe-madeline-miller.jpeg" alt="Circe"/ width="200">
-          </p> 
-        </span>
+            <img src="circe-madeline-miller.jpeg" alt="Circe" width="200">
       </section>
       <section id = "new">
         <h2>Recap and Remaining Discussion</h2>
-        <span>
           <p> 
-            <h3><i>To Kill a Mockingbird</i> by <a href="https://en.wikipedia.org/wiki/Harper_Lee"><i>Nelle Harper Lee</i></a></h3>
-            We immersed ourselves in its portrayal of justice, 
-            prejudice, and moral integrity in the American South during the 1930s. We talked about the profound impact of racial injustice.         Our discussion gravitated towards the continuous relevance of the novel's themes, prompting reflections on the ongoing struggle
-            for equality and compassion. We explored the nuances of character dynamics
-            uncovering layers of meaning in their interactions with the world around them. As we dissected the narrative's moral dilemmas and poignant moments, we were reminded of the power of empathy and the importance of standing up for what is right, even in the face of adversity. <br>
+            <h3><i>To Kill a Mockingbird</i> by <a href="https://en.wikipedia.org/wiki/Harper_Lee"><i>Nelle Harper Lee</i></a></h3> We immersed ourselves in its portrayal of justice, prejudice, and moral integrity in the American South during the 1930s. We talked about the profound impact of racial injustice. Our discussion gravitated towards the continuous relevance of the novel's themes, prompting reflections on the ongoing struggle for equality and compassion. We explored the nuances of character dynamics uncovering layers of meaning in their interactions with the world around them. As we dissected the narrative's moral dilemmas and poignant moments, we were reminded of the power of empathy and the importance of standing up for what is right, even in the face of adversity.</p><br>
             <br>
             <img src="To_Kill_a_Mockingbird_(first_edition_cover).jpg" alt="To Kill a Mockingbird"/ width="200">
             <br>
             <br>
-            Audio from the movie:<br>
+            <h4>Audio from the movie:<h4><br>
             <audio controls src="tokillmockingbirdaudio.mp3"></audio>
-          </p> 
-        </span>
       </section>
       <section id="nextMonth">
         <h2> Book for Next Month:  </h2>
