--- a/index.html
+++ b/index.html
@@ -47,20 +47,19 @@
       <hr>      
       <section id = "recap">
         <h2>Recap and Remaining Discussion</h2>
-          <p> 
-            We read the book    <span style = "background-color:lightblue;"><i>Circe</i> by <a href="https://madelinemiller.com/"><i>Madeline Miller</i></a> </span> last month and had an in-depth discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism. However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on. We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling thought-provoking read that sparked engaging discussions and amplified the voice of women throughout mythology. </p> <br>         
+          <p> We read the book    <span style = "background-color:lightblue;"><i>Circe</i> by <a href="https://madelinemiller.com/"><i>Madeline Miller</i></a> </span> last month and had an in-depth discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism. However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on. We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling thought-provoking read that sparked engaging discussions and amplified the voice of women throughout mythology. </p> <br>         
             <br>
             <img src="circe-madeline-miller.jpeg" alt="Circe" width="200">
       </section>
       <section id = "new">
         <h2>Recap and Remaining Discussion</h2>
-          <p> 
-            <h3><i>To Kill a Mockingbird</i> by <a href="https://en.wikipedia.org/wiki/Harper_Lee"><i>Nelle Harper Lee</i></a></h3> We immersed ourselves in its portrayal of justice, prejudice, and moral integrity in the American South during the 1930s. We talked about the profound impact of racial injustice. Our discussion gravitated towards the continuous relevance of the novel's themes, prompting reflections on the ongoing struggle for equality and compassion. We explored the nuances of character dynamics uncovering layers of meaning in their interactions with the world around them. As we dissected the narrative's moral dilemmas and poignant moments, we were reminded of the power of empathy and the importance of standing up for what is right, even in the face of adversity.</p><br>
+        <h3><i>To Kill a Mockingbird</i> by <a href="https://en.wikipedia.org/wiki/Harper_Lee"><i>Nelle Harper Lee</i></a></h3>
+        <p>We immersed ourselves in its portrayal of justice, prejudice, and moral integrity in the American South during the 1930s. We talked about the profound impact of racial injustice. Our discussion gravitated towards the continuous relevance of the novel's themes, prompting reflections on the ongoing struggle for equality and compassion. We explored the nuances of character dynamics uncovering layers of meaning in their interactions with the world around them. As we dissected the narrative's moral dilemmas and poignant moments, we were reminded of the power of empathy and the importance of standing up for what is right, even in the face of adversity.</p><br>
             <br>
-            <img src="To_Kill_a_Mockingbird_(first_edition_cover).jpg" alt="To Kill a Mockingbird"/ width="200">
+            <img src="To_Kill_a_Mockingbird_(first_edition_cover).jpg" alt="To Kill a Mockingbird" width="200">
             <br>
             <br>
-            <h4>Audio from the movie:<h4><br>
+            <h4>Audio from the movie:</h4><br>
             <audio controls src="tokillmockingbirdaudio.mp3"></audio>
       </section>
       <section id="nextMonth">
@@ -76,7 +75,7 @@
           <a href = "https://soundcloud.com/schraeds/sets/the-great-gatsby-soundtrack">The full soundtrack from <em>The Great Gatsby </em></a></details>
           <br>
           <video controls width="400">
-            <source src="theGreatGatsbyMovie.mp4" />
+            <source src="theGreatGatsbyMovie.mp4">
           </video>
           <br>
       </section>  
@@ -85,10 +84,10 @@
         <form>
           <fieldset>
             <label for="name">Name: </label>
-            <input type="text" name="name" id="name" required />
+            <input type="text" name="name" id="name" required >
             <br><br>
             <label for="email">Email: </label>
-            <input type="email" name="email" id="email" required />
+            <input type="email" name="email" id="email" required >
             <br><br>
             <label for="birthdate">Date of Birth:</label><br>
             <input type="date" id="birthdate" name="birthdate" required><br><br>
@@ -105,9 +104,9 @@
             <label>Science Fiction</label><br>
             <input type="checkbox" value="Other">
             <label>Other</label><br>
-            <label for="other">Please mention your preferred genres, if selected "Other": </label>
-            <input type="text" required /><br><br>
-            
+            <label for="other">Please mention your preferred genres, if selected "Other":</label>
+            <input type="text" id="other" name="other" required><br><br>
+
             <label for="Cupacke">Favorite Cupacke Flavour:</label>
             <select id="Cupacke" name="Cupacke" required>
               <option value="">Select...</option>
@@ -116,7 +115,7 @@
               <option>Strawberry</option>
             </select><br><br>
             <label for="ser">If we were to start reading a book series, which one would you prefer?</label>
-            <input type = "text" list="series" id="ser" name="ser" />
+            <input type = "text" list="series" id="ser" name="ser" >
 
             <datalist id="series">
               <option value="Harry Potter series"></option>
@@ -128,10 +127,9 @@
         
             <label for="story">Tell us about your favorite book:</label><br> 
             <textarea id="story" name="story" rows="5" cols="33"></textarea><br><br>
-
             <label for="join">Are you excited to join us?</label><br>
-            <input type="radio" id="join" name="join" value="huey" required />
-    <label for="huey">Yes!</label><br><br>
+            <input type="radio" id="join" name="join" value="huey" required >
+            <label for="join">Yes!</label><br><br>
             <button type="submit">Join Now</button>
           </fieldset>
         </form>
