--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
           </video>
           <br>
       </section>  
-      <section>
-        <legend>Join Our book Club </legend>
         <form>
           <fieldset>
+            <legend>Join Our book Club </legend>
             <label for="name">Name: </label>
             <input type="text" name="name" id="name" required >
             <br><br>
@@ -132,11 +131,10 @@
             <label for="join">Yes!</label><br><br>
             <button type="submit">Join Now</button>
           </fieldset>
-        </form>
-      </section>    
+        </form>  
     </main>
     <footer>
-      
+        Lab 2 Meeting Minutes Date: 04-10-24 
     </footer>
   </body>
 </html>
