--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <strong>The Great Gatsby by F. Scott Fitzgerald </strong>
         <details>
           <summary>
-          Book Discription
+            Book Description
           </summary>
           <p><em>Through the mesmerizing prose and rich character portraits, this classic unravels a tale of love, ambition, and the tragic consequences of desires, leaving you spellbound and eager to unravel its mysteries.</em>      
           </p>
@@ -106,7 +106,7 @@
             <label for="other">Please mention your preferred genres, if selected "Other":</label>
             <input type="text" id="other" name="other" required><br><br>
 
-            <label for="Cupacke">Favorite Cupacke Flavour:</label>
+            <label for="Cupacke">Favorite Cupcake Flavour:</label>
             <select id="Cupacke" name="Cupacke" required>
               <option value="">Select...</option>
               <option>Chocolate</option>
