--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <label for="join">Are you excited to join us?</label><br>
             <input type="radio" id="join" name="join" value="huey" required >
             <label for="join">Yes!</label><br><br>
-            <button type="submit">Join Now</button>
+            <button type="submit">Join Now</button><br><br>
           </fieldset>
         </form>  
     </main>
