--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <input type="checkbox" value="Other">
             <label>Other</label><br>
             <label for="other">Please mention your preferred genres, if selected "Other":</label>
-            <input type="text" id="other" name="other" required><br><br>
+            <input type="text" id="other" name="other"><br><br>
 
             <label for="Cupacke">Favorite Cupcake Flavour:</label>
             <select id="Cupacke" name="Cupacke" required>
@@ -129,8 +129,8 @@
             <label for="join">Are you excited to join us?</label><br>
             <input type="radio" id="join" name="join" value="huey" required >
             <label for="join">Yes!</label><br><br>
-            <button type="submit">Join Now</button><br><br>
-          </fieldset>
+            <button type="submit">Join Now</button>
+          </fieldset><br><br>
         </form>  
     </main>
     <footer>
