--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
       <hr>      
       <section id = "recap">
         <h2>Recap and Remaining Discussion</h2>
-          <p> We read the book    <span style = "background-color:lightblue;"><i>Circe</i> by <a href="https://madelinemiller.com/"><i>Madeline Miller</i></a> </span> last month and had an in-depth discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism. However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on. We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling thought-provoking read that sparked engaging discussions and amplified the voice of women throughout mythology. </p> <br>         
+          <p> We read the book <span><i>Circe</i> by <a href="https://madelinemiller.com/"><i>Madeline Miller</i></a> </span> last month and had an in-depth discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism. However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on. We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling thought-provoking read that sparked engaging discussions and amplified the voice of women throughout mythology. </p> <br>         
             <br>
             <img src="circe-madeline-miller.jpeg" alt="Circe" width="200">
       </section>
+      <hr>
       <section id = "new">
-        <h2>Recap and Remaining Discussion</h2>
+        <h2>New Discussion</h2>
         <h3><i>To Kill a Mockingbird</i> by <a href="https://en.wikipedia.org/wiki/Harper_Lee"><i>Nelle Harper Lee</i></a></h3>
         <p>We immersed ourselves in its portrayal of justice, prejudice, and moral integrity in the American South during the 1930s. We talked about the profound impact of racial injustice. Our discussion gravitated towards the continuous relevance of the novel's themes, prompting reflections on the ongoing struggle for equality and compassion. We explored the nuances of character dynamics uncovering layers of meaning in their interactions with the world around them. As we dissected the narrative's moral dilemmas and poignant moments, we were reminded of the power of empathy and the importance of standing up for what is right, even in the face of adversity.</p><br>
             <br>
@@ -62,6 +63,7 @@
             <h4>Audio from the movie:</h4><br>
             <audio controls src="tokillmockingbirdaudio.mp3"></audio>
       </section>
+      <hr>
       <section id="nextMonth">
         <h2> Book for Next Month:  </h2>
         <strong>The Great Gatsby by F. Scott Fitzgerald </strong>
@@ -71,14 +73,14 @@
           </summary>
           <p><em>Through the mesmerizing prose and rich character portraits, this classic unravels a tale of love, ambition, and the tragic consequences of desires, leaving you spellbound and eager to unravel its mysteries.</em>      
           </p>
- 
           <a href = "https://soundcloud.com/schraeds/sets/the-great-gatsby-soundtrack">The full soundtrack from <em>The Great Gatsby </em></a></details>
           <br>
           <video controls width="400">
             <source src="theGreatGatsbyMovie.mp4">
           </video>
           <br>
-      </section>  
+      </section> 
+      <hr> 
         <form>
           <fieldset>
             <legend>Join Our book Club </legend>
@@ -133,6 +135,7 @@
           </fieldset><br><br>
         </form>  
     </main>
+    <hr>
     <footer>
         Lab 2 Meeting Minutes Date: 04-10-24 
     </footer>
