--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
   <body>
     <div id="page">
       <header>
-        <i>Lab 2 Meeting Minutes Date: 04-10-24 </i>
+        <i>Lab 2 Meeting Minutes Date: 04-10-24 </i> 
+      </header>    
+      <div class="navigation">
         <div class = "header_H">
           <p> <b> Navigation </b></p>
-        </div>  
-      </header>    
-        <div class="navigation">
+        </div> 
+        <br>
           <nav>
               <div class="navigation_item"><a href="#Attendees">Attendees</a></div>
               <div class="navigation_item"><a href="#agenda">Agenda</a></div>
@@ -69,7 +70,7 @@
           <h2>Recap and Remaining Discussion</h2>
             <p> We read the book <span><i>Circe</i> by <a href="https://madelinemiller.com/"><i>Madeline Miller</i></a> </span> last month and had an in-depth discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism. However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on. We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling thought-provoking read that sparked engaging discussions and amplified the voice of women throughout mythology. </p> <br>         
               <br>
-              <img src="circe-madeline-miller.jpeg" alt="Circe" width="200">
+              <img src="circe-madeline-miller.jpeg" alt="Circe" >
         </section>
         <hr>
         <section id = "new">
@@ -101,6 +102,7 @@
             <br>
         </section> 
         <hr> 
+        <br>
           <form>
             <fieldset>
               <div class="forForm">
