--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Meeting Minutes</title>
     <style>
+      /* For the main heading */
       h1 {
         text-align: left;
         font-family: "jacquard24";
