--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
               <div class="forForm">
                 <legend>Join Our book Club </legend>
                 <br>
+                <img src="book.png" alt="Circe"  width="50">
+                <br>
                 <label for="name">Name: </label>
                 <input type="text" name="name" id="name" required >
                 <br><br>
