--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <h2>Recap and Remaining Discussion</h2>
             <p> We read the book <i>Circe by<a href="https://madelinemiller.com/">Madeline Miller</i></a> last month and had an in-depth discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism. However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on. We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling thought-provoking read that sparked engaging discussions and amplified the voice of women throughout mythology. </p> <br>         
               <br>
-              <img src="circe-madeline-miller.jpeg" alt="Circe"  width="200">
+              <img src="circe-madeline-miller.jpeg" alt="Circe">
         </section>
         <hr>
         <section id = "new">
@@ -95,7 +95,7 @@
           <h3><i>To Kill a Mockingbird</i> by <a href="https://en.wikipedia.org/wiki/Harper_Lee"><i>Nelle Harper Lee</i></a></h3>
           <p>We immersed ourselves in its portrayal of justice, prejudice, and moral integrity in the American South during the 1930s. We talked about the profound impact of racial injustice. Our discussion gravitated towards the continuous relevance of the novel's themes, prompting reflections on the ongoing struggle for equality and compassion. We explored the nuances of character dynamics uncovering layers of meaning in their interactions with the world around them. As we dissected the narrative's moral dilemmas and poignant moments, we were reminded of the power of empathy and the importance of standing up for what is right, even in the face of adversity.</p><br>
               <br>
-              <img src="To_Kill_a_Mockingbird_(first_edition_cover).jpg" alt="To Kill a Mockingbird" width="200">
+              <img src="To_Kill_a_Mockingbird_(first_edition_cover).jpg" alt="To Kill a Mockingbird" >
               <br>
               <br>
               <h4>Audio from the movie:</h4><br>
