--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         text-decoration-line: underline;
         text-decoration-color: cornsilk;
       }
-      h2{
-        color: rgb(238, 227, 185);
-      }
+
     </style>
   </head>
   <body>
@@ -95,10 +93,10 @@
           <h3><i>To Kill a Mockingbird</i> by <a href="https://en.wikipedia.org/wiki/Harper_Lee"><i>Nelle Harper Lee</i></a></h3>
           <p>We immersed ourselves in its portrayal of justice, prejudice, and moral integrity in the American South during the 1930s. We talked about the profound impact of racial injustice. Our discussion gravitated towards the continuous relevance of the novel's themes, prompting reflections on the ongoing struggle for equality and compassion. We explored the nuances of character dynamics uncovering layers of meaning in their interactions with the world around them. As we dissected the narrative's moral dilemmas and poignant moments, we were reminded of the power of empathy and the importance of standing up for what is right, even in the face of adversity.</p><br>
               <br>
-              <img src="To_Kill_a_Mockingbird_(first_edition_cover).jpg" alt="To Kill a Mockingbird" >
+              <img src="To_Kill_a_Mockingbird_(first_edition_cover).jpg" alt="To Kill a Mockingbird" width="200">
               <br>
               <br>
-              <h4>Audio from the movie:</h4><br>
+              <h4 class = "for">Audio from the movie:</h4><br>
               <audio controls src="tokillmockingbirdaudio.mp3"></audio>
         </section>
         <hr>
