--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <main>
         <h1 style=" color:cornsilk">BookNotes Meeting Minutes</h1>
         <hr>
-        <section id = "Attendees">
+        <section>
           <div class = "attendees_style">
             <h2> Meeting Attendees</h2>
             <table>
@@ -74,7 +74,7 @@
         <hr>
         <section id = "agenda">
           <h2>Agenda</h2>
-          <ol>
+          <ol class = "imp">
             <li>Discussion on Book of the Month</li>
             <li>Next Book of the Month</li>
             <li><b>Date, time</b> and <b>location</b> for the next meeting</li>        
