--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <main>
         <h1 style=" color:cornsilk">BookNotes Meeting Minutes</h1>
         <hr>
-        <section>
+        <section id="#Attendees">
           <div class = "attendees_style">
             <h2> Meeting Attendees</h2>
             <table>
@@ -83,7 +83,7 @@
         <hr>      
         <section id = "recap">
           <h2>Recap and Remaining Discussion</h2>
-            <p> We read the book <i>Circe by<a href="https://madelinemiller.com/">Madeline Miller</i></a> last month and had an in-depth discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism. However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on. We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling thought-provoking read that sparked engaging discussions and amplified the voice of women throughout mythology. </p> <br>         
+            <p> We read the book <i>Circe by </i><a href="https://madelinemiller.com/"><i>Madeline Miller</i></a> last month and had an in-depth discussion about the characters, a new perspective on Greek mythology, and the underlying commentary on Feminism. However, several topics required more discussion from our last meeting. We revisited the significance of Aeaea, the island Circe was stranded on. We concluded that there is a direct connection between the island and her quest for autonomy. Our final verdict for the book is that Circe is a compelling thought-provoking read that sparked engaging discussions and amplified the voice of women throughout mythology. </p> <br>         
               <br>
               <img src="images/circe-madeline-miller.jpeg" alt="Circe">
         </section>
@@ -120,7 +120,6 @@
         <br>
           <form>
             <fieldset>
-              <div class="forForm">
                 <legend>Join Our book Club </legend>
                 <br>
                 <img src="images/book.png" alt="Circe"  width="50">
@@ -173,7 +172,6 @@
                 <input type="radio" id="join" name="join" value="huey" required >
                 <label for="join">Yes!</label><br><br>
                 <button type="submit">Join Now</button>
-              </div>
             </fieldset>
           </form>  
       </main>
