--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div> 
         <br>
           <nav>
-              <div class="navigation_item"><a href="#Attendees">Attendees</a></div>
-              <div class="navigation_item"><a href="#agenda">Agenda</a></div>
+            <div class="navigation_item"><a href="#attendees">Meeting Attendees</a></div>
+            <div class="navigation_item"><a href="#agenda">Agenda</a></div>
               <div class="navigation_item"><a href="#recap">Recap and Remaining Discussion</a></div>
               <div class="navigation_item"><a href="#new">New Discussion</a></div>
               <div class="navigation_item"><a href="#nextMonth">Next Month</a></div>
@@ -40,7 +40,7 @@
       <main>
         <h1 style=" color:cornsilk">BookNotes Meeting Minutes</h1>
         <hr>
-        <section id="#Attendees">
+        <section id = "attendees">
           <div class = "attendees_style">
             <h2> Meeting Attendees</h2>
             <table>
