--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         text-align: left;
         font-family: "jacquard24";
         font-size: 22mm;
-        text-decoration-line: underline;
+        text-decoration: underline;
         text-decoration-color: cornsilk;
       }
 
